Add text about change running, rhythm section.
Still needs a graphic with the bass line, plus some explanatory text
there.

--- a/footnotes/ch5-notes.tex
+++ b/footnotes/ch5-notes.tex
@@ -83,6 +83,16 @@
     Monk, \headlesscite{zwerin:monk}}. In the live recording here, he can
   occasionally be heard shouting words of encouragement to Griffin.}
 
+\fntext{ran-3}{%
+  % xxx citation from Larson
+  This difficulty is perhaps one of the reason that Steve Larson's book on the
+  subject focuses on solo piano recordings of ``'Round Midnight,'' a piece in
+  which the harmonies are well-defined (unlike Rhythm changes) and there are
+  no other band members to muddy the waters. Garrett Michaelsen critiques
+  Larson on this same point, and also suggests that Larson overemphasizes the
+  importance of harmony in general
+  \parentext{\headlesscite[9--10]{michaelsen:2013}}.}
+
 %%% Local Variables:
 %%% mode: latex
 %%% TeX-master: "../diss"
