Finish text on Griffin's solo (need examples).

--- a/footnotes/ch5-notes.tex
+++ b/footnotes/ch5-notes.tex
@@ -84,6 +84,11 @@
   occasionally be heard shouting words of encouragement to Griffin.}
 
 \fntext{ran-3}{%
+  % xxx citation about walking bass lines
+  A detailed account of exactly how walking bass lines project harmony is
+  beyond the scope of this project; for a good overview, see \cite{}.}
+
+\fntext{ran-4}{%
   % xxx citation from Larson
   This difficulty is perhaps one of the reason that Steve Larson's book on the
   subject focuses on solo piano recordings of ``'Round Midnight,'' a piece in
@@ -92,6 +97,11 @@
   Larson on this same point, and also suggests that Larson overemphasizes the
   importance of harmony in general
   \parentext{\headlesscite[9--10]{michaelsen:2013}}.}
+
+\fntext{ran-5}{%
+  % xxx fix this transcription
+  The main interest in this particular passage is metric: Griffin superimposes
+  a three-beat pattern over the quadruple meter starting in m.~341.}
 
 %%% Local Variables:
 %%% mode: latex
