Add text on Monk's solo (need graphics).
This should (?) wrap up the text on Rhythm-a-ning, minus any summary
that needs to happen.

--- a/footnotes/ch5-notes.tex
+++ b/footnotes/ch5-notes.tex
@@ -103,6 +103,20 @@
   The main interest in this particular passage is metric: Griffin superimposes
   a three-beat pattern over the quadruple meter starting in m.~341.}
 
+\fntext{ran-6}{%
+  % xxx citation on comping
+  ``Comping'' is what jazz musicians call the act of accompanying another
+  soloist.}
+
+\fntext{ran-7}{%
+  % xxx check this history of the live dates
+  \emph{Thelonious in Action} is a live recording made at the end of a long
+  run at the Five Spot Cafe in New York. Ahmed Abdul-Malik was used to playing
+  with Monk by the time of the recording, and catches the dominant-cycle A
+  section almost immediately on the recording; Monk's strong left-hand
+  entrance on F\sharp\ at m.~385 removes any doubt as to the progression that
+  will follow.}
+
 %%% Local Variables:
 %%% mode: latex
 %%% TeX-master: "../diss"
