Add missing citations to footnotes.

--- a/diss.bib
+++ b/diss.bib
@@ -588,6 +588,15 @@ Theory} }
   year        = {2003}
 }
 
+@book{kelley:2009,
+  author      = {Kelley, Robin D.~G.},
+  title       = {Thelonious Monk: The Life and Times of an American
+                Original},
+  address     = {New York},
+  publisher   = {Free Press},
+  year        = {2009}
+}
+
 @book{kernfeld:2006,
   author      = {Kernfeld, Barry},
   title       = {The Story of Fake Books},
