--- a/footnotes/ch5-notes.tex
+++ b/footnotes/ch5-notes.tex
@@ -89,31 +89,33 @@
   beyond the scope of this project; for a good overview, see \cite{}.}
 
 \fntext{ran-4}{%
-  % xxx citation from Larson
   This difficulty is perhaps one of the reason that Steve Larson's book on the
-  subject focuses on solo piano recordings of ``'Round Midnight,'' a piece in
-  which the harmonies are well-defined (unlike Rhythm changes) and there are
-  no other band members to muddy the waters. Garrett Michaelsen critiques
-  Larson on this same point, and also suggests that Larson overemphasizes the
-  importance of harmony in general
+  subject \parentext{\headlesscite{larson:2009}} focuses primarily on solo
+  piano recordings of ``'Round Midnight,'' a piece in which the harmonies are
+  well-defined---unlike Rhythm changes---and there are no other band members
+  to muddy the waters. (Larson does include a live recording from Bill Evans
+  and a partial transcription of a Bud Powell recording, each of which uses a
+  piano trio, plus an ``ensemble'' recording from Evans's \emph{Conversations
+    with Myself}, a multi-track recording in which Evans acts as all three
+  members of the ensemble.) Garrett Michaelsen critiques Larson on this same
+  point, and also suggests that Larson overemphasizes the importance of
+  harmony in general
   \parentext{\headlesscite[9--10]{michaelsen:2013}}.}
 
 \fntext{ran-5}{%
-  % xxx fix this transcription
   The main interest in this particular passage is metric: Griffin superimposes
   a three-beat pattern over the quadruple meter starting in m.~341.}
 
 \fntext{ran-6}{%
-  % xxx citation on comping
-  ``Comping'' is what jazz musicians call the act of accompanying another
-  soloist.}
+  ``Comping'' is what jazz musicians call the act of accompanying (or
+  complementing) a soloist; see \cite[223--34]{levine:piano}.}
 
 \fntext{ran-7}{%
-  % xxx check this history of the live dates
-  \emph{Thelonious in Action} is a live recording made at the end of a long
-  run at the Five Spot Cafe in New York. Ahmed Abdul-Malik was used to playing
-  with Monk by the time of the recording, and catches the dominant-cycle A
-  section almost immediately on the recording; Monk's strong left-hand
+  \emph{Thelonious in Action} is a live recording made at the end of an
+  eight-week run at the Five Spot Cafe in New
+  York \parentext{\cite[242--43]{kelley:2009}}. Ahmed Abdul-Malik was used to
+  playing with Monk by the time of the recording, and catches the
+  dominant-cycle A section almost immediately; Monk's strong left-hand
   entrance on F\sharp\ at m.~385 removes any doubt as to the progression that
   will follow.}
 
