Add notes about Hodson, interaction.

--- a/diss.bib
+++ b/diss.bib
@@ -461,6 +461,15 @@ Theory} }
   year        = {2012}
 }
 
+@book{hodson:2007,
+  author      = {Hodson, Robert},
+  title       = {Interaction, Improvisation, and Interplay in Jazz},
+  shorttitle  = {Interaction, Improvisation, and Interplay},
+  address     = {New York},
+  publisher   = {Routledge},
+  year        = {2007}
+}
+
 @article{hook:2002,
   author      = {Hook, Julian},
   title       = {Uniform Triadic Transformations},
