--- a/footnotes/ch5-notes.tex
+++ b/footnotes/ch5-notes.tex
@@ -28,7 +28,12 @@
 \fntext{rcg-5}{%
   These six harmonizations do not begin to constitute a complete set of
   substitutions for these four bars. Jamey Aebersold gives 43 harmonizations
-  of the Rhythm A section in \headlesscite[26]{aebersold:rhythm}.}
+  of the Rhythm A section in \headlesscite[26]{aebersold:rhythm}. Robert
+  Hodson, borrowing a linguistic metaphor from Noam Chomsky, describes the
+  harmony of the tune in a generative fashion: the ``deep structure'' of
+  the Rhythm changes consists of prolongations of \Bflat in the A sections,
+  with the bridge consisting of a motion towards \Bflat; see
+  \cite[62--65]{hodson:2007}.}
 
 \fntext{rcg-6}{%
   I have not included another copy of the complete \tf space here, but one can
@@ -71,6 +76,12 @@
   ``knowing the changes,'' since to really know Rhythm changes involves knowing
   about the wide variety of harmonic possibilities that defines the genre.}
 
+\fntext{ran-a}{%
+  Robert Hodson provides a similar analysis of the \emph{Criss-Cross}
+  recording (though not from a transformational perspective) in
+  \headlesscite[66--74]{hodson:2007}. His analysis focuses more strongly on
+  the interactive elements of the performance than the harmonic ones.}
+
 \fntext{ran-1}{%
   The second volume of the old \emph{Real Book} does give changes during the
   A sections, but they are somewhat inaccurate; in any case, it also includes the
@@ -87,6 +98,11 @@
   % xxx citation about walking bass lines
   A detailed account of exactly how walking bass lines project harmony is
   beyond the scope of this project; for a good overview, see \cite{}.}
+
+\fntext{ran-3a}{%
+  There is much more to be said about the role of interaction in negotiating
+  harmony in Rhythm tunes; we will return to this idea in more detail in the
+  analysis of ``The Eternal Triangle'' in the next section.}
 
 \fntext{ran-4}{%
   This difficulty is perhaps one of the reason that Steve Larson's book on the
