Initial text on "Eternal Triangle."
Still needs graphics, citations.

--- a/discog.bib
+++ b/discog.bib
@@ -192,6 +192,17 @@
   type        = {\abbrev{CD}}
 }
 
+@music{gillespie:sonnyside,
+  author      = {Gillespie, Dizzy and Stitt, Sonny and Rollins, Sonny},
+  title       = {Sonny Side Up},
+  userd       = {Verve \abbrev{MGV} 8262,},
+  origdate    = {1957},
+  series      = {Reissued, Verve},
+  number      = {5214262},
+  year        = {1992},
+  type        = {\abbrev{CD}}
+}
+
 @music{gordon:power,
   author      = {Gordon, Dexter},
   title       = {More Power!},
