--- a/footnotes/ch5-notes.tex
+++ b/footnotes/ch5-notes.tex
@@ -135,6 +135,25 @@
   entrance on F\sharp\ at m.~385 removes any doubt as to the progression that
   will follow.}
 
+\fntext{et-1}{%
+  % xxx find better source for this?
+  See, for example, Stephen Cook's review on \emph{AllMusic}, where he notes
+  that on ``{}`The Eternal Triangle,' in particular, Stitt and Rollins impress
+  in their roles as tenor titans \ldots\, an embarrassment of solo riches
+  comes tumbling out of both these men's horns'' \parentext{\cite{cook:2015}}.}
+
+\fntext{et-2}{%
+  % xxx side-slipping citation
+  Jerry Coker says this.
+}
+
+\fntext{et-3}{%
+  % xxx need citation
+  ``Playing outside'' is one of Coker's categories of improvisational tools;
+  see \cite{}. I suspect that the ``outside'' terminology is related to
+  Russell's ``outgoing'' scale choices, but I have not been able to
+  corroborate this suspicion.}
+
 %%% Local Variables:
 %%% mode: latex
 %%% TeX-master: "../diss"
