--- a/diss.bib
+++ b/diss.bib
@@ -304,6 +304,14 @@ Theory} }
   year        = {1989}
 }
 
+@review{cook:2015,
+  author      = {Cook, Stephen},
+  title       = {Review of Dizzy Gillespie, \textit{Sonny Side Up}},
+  journal     = {AllMusic.com},
+  url         = {http://www.allmusic.com/album/sonny-side-up-mw0000188698},
+  urldate     = {2015-07-13}
+}
+
 @article{cqt:2008,
   author      = {Callender, Clifton and Quinn, Ian and Tymoczko, Dmitri},
   title       = {Generalized Voice-Leading Spaces},
