Add graphics/citations for Eternal Triangle intro.

--- a/footnotes/ch5-notes.tex
+++ b/footnotes/ch5-notes.tex
@@ -143,16 +143,14 @@
   comes tumbling out of both these men's horns'' \parentext{\cite{cook:2015}}.}
 
 \fntext{et-2}{%
-  % xxx side-slipping citation
-  Jerry Coker says this.
-}
+  Jerry Coker defines side-slipping as ``deliberately playing `out-of-the-key'
+  for the sake of creating tension''
+  \parentext{\headlesscite[83]{coker:elements}}.}
 
 \fntext{et-3}{%
-  % xxx need citation
-  ``Playing outside'' is one of Coker's categories of improvisational tools;
-  see \cite{}. I suspect that the ``outside'' terminology is related to
-  Russell's ``outgoing'' scale choices, but I have not been able to
-  corroborate this suspicion.}
+  I suspect that the ``outside'' terminology is related to Russell's
+  ``outgoing'' scale choices, but I have not been able to corroborate this
+  suspicion.}
 
 %%% Local Variables:
 %%% mode: latex
