Clarify text/citation on side-slipping.

--- a/footnotes/ch5-notes.tex
+++ b/footnotes/ch5-notes.tex
@@ -148,6 +148,11 @@
   \parentext{\headlesscite[83]{coker:elements}}.}
 
 \fntext{et-3}{%
+  Dmitri Tymoczko notes that side-slipping usually demonstrates efficient
+  voice-leading; he also emphasizes its role in creating polychordal or
+  polytonal effects; see \headlesscite[374--78]{tymoczko:2011}.}
+
+\fntext{et-4}{%
   I suspect that the ``outside'' terminology is related to Russell's
   ``outgoing'' scale choices, but I have not been able to corroborate this
   suspicion.}
