Text on "Eternal Triangle" B section strategies.
(Still needs examples.)

--- a/footnotes/ch5-notes.tex
+++ b/footnotes/ch5-notes.tex
@@ -157,6 +157,17 @@
   ``outgoing'' scale choices, but I have not been able to corroborate this
   suspicion.}
 
+\fntext{et-5}{%
+  % xxx citation from Coker
+  This repeating pattern is one of what are sometimes called ``digital
+  patterns''; though they are more common at faster tempos (and in eighth
+  notes), this is a standard 5--3--2--1 pattern, where the numbers indicate
+  scale degrees of the minor seventh chord).}
+
+\fntext{et-6}{%
+  On metrical dissonance in jazz, see especially \cite[52--54 and
+  throughout]{love:2013}.}
+
 %%% Local Variables:
 %%% mode: latex
 %%% TeX-master: "../diss"
