--- a/footnotes/ch5-notes.tex
+++ b/footnotes/ch5-notes.tex
@@ -157,12 +157,16 @@
   ``outgoing'' scale choices, but I have not been able to corroborate this
   suspicion.}
 
+\fntext{et-4a}{%
+  That $f_7 = T_{11}$ is one of the properties of signature transformations;
+  see \cite[142--44]{hook:2008}.}
+
 \fntext{et-5}{%
-  % xxx citation from Coker
   This repeating pattern is one of what are sometimes called ``digital
   patterns''; though they are more common at faster tempos (and in eighth
   notes), this is a standard 5--3--2--1 pattern, where the numbers indicate
-  scale degrees of the minor seventh chord).}
+  scale degrees of the minor seventh chord. Jerry Coker gives this example
+  from Rollin's solo in \headlesscite[11]{coker:elements}.}
 
 \fntext{et-6}{%
   On metrical dissonance in jazz, see especially \cite[52--54 and
