Add introduction to interaction.

--- a/diss.bib
+++ b/diss.bib
@@ -119,6 +119,14 @@ Theory} }
   year        = {2012}
 }
 
+@book{bregman:1990,
+  author      = {Bregman, Albert S.},
+  title       = {Auditory Scene Analysis},
+  address     = {Cambridge, MA},
+  publisher   = {MIT Press},
+  year        = {1990}
+}
+
 @article{bribitzerstull:2006,
   author      = {Bribitzer-Stull, Matthew},
   title       = {The A\flat--C--E Complex: The Origin and Function of
@@ -310,6 +318,14 @@ Theory} }
   journal     = {AllMusic.com},
   url         = {http://www.allmusic.com/album/sonny-side-up-mw0000188698},
   urldate     = {2015-07-13}
+}
+
+@book{coolman:1990,
+  author      = {Coolman, Todd},
+  title       = {The Bottom Line: The Ultimate Bass Line Book},
+  address     = {New Albany, IN},
+  publisher   = {Jamey Aebersold Jazz},
+  year        = {1990}
 }
 
 @article{cqt:2008,
