--- a/footnotes/ch5-notes.tex
+++ b/footnotes/ch5-notes.tex
@@ -26,6 +26,7 @@
   The ``mix-and-match'' metaphor comes from \cite[149]{jaffe:1996}.}
 
 \fntext{rcg-5}{%
+  \label{fn:deep-structure}
   These six harmonizations do not begin to constitute a complete set of
   substitutions for these four bars. Jamey Aebersold gives 43 harmonizations
   of the Rhythm A section in \headlesscite[26]{aebersold:rhythm}. Robert
@@ -95,9 +96,9 @@
   occasionally be heard shouting words of encouragement to Griffin.}
 
 \fntext{ran-3}{%
-  % xxx citation about walking bass lines
   A detailed account of exactly how walking bass lines project harmony is
-  beyond the scope of this project; for a good overview, see \cite{}.}
+  beyond the scope of this project; for a good overview, see
+  \cite{coolman:1990}.}
 
 \fntext{ran-3a}{%
   There is much more to be said about the role of interaction in negotiating
@@ -171,6 +172,20 @@
 \fntext{et-6}{%
   On metrical dissonance in jazz, see especially \cite[52--54 and
   throughout]{love:2013}.}
+
+\fntext{et-7}{%
+    \Cite[36--38 and throughout]{michaelsen:2013}. Michaelsen's work draws on
+    Albert Bregman's schema-based stream segregation, while acknowledging that
+    auditory streams in jazz are more flexible than Bregman's own; see
+    \cite{bregman:1990}.}
+
+\fntext{et-8}{%
+  The closest Michaelsen gets to an outright discussion of harmony comes in
+  his discussion of interaction with ``referents'': he notes that ``chord
+  changes are inherently open-ended expressions of harmony that permit a wide
+  variety of possible chord voicings,'' and that ``different referents will
+  motivate projections of varying specificity''
+  \parentext{\headlesscite[90--91]{michaelsen:2013}}.}
 
 %%% Local Variables:
 %%% mode: latex
