Add text on blues convergence in Eternal Triangle.

--- a/footnotes/ch5-notes.tex
+++ b/footnotes/ch5-notes.tex
@@ -187,6 +187,38 @@
   motivate projections of varying specificity''
   \parentext{\headlesscite[90--91]{michaelsen:2013}}.}
 
+\fntext{et-9}{%
+  Charlie Persip's drums are not included in the transcription, since they do
+  not contribute to the harmony.}
+
+\fntext{et-10}{%
+  Throughout these interactional analyses, I follow Michaelsen's own use of
+  language, which relocates a listener's perception into the player. Thus,
+  ``Stitt responds to this tonic pedal'' should be understood as ``I, the
+  listener/analyst, hear Stitt's musical utterance in relationship to the
+  tonic pedal of the bass.'' This language, though potentially confusing, is
+  in general clearer and easier to read. See \cite[46--47]{michaelsen:2013}.}
+
+\fntext{et-11}{%
+  At the same time, Bryant's piano voicings project some continuity with the
+  end of the bridge, since he continues moving his right hand in parallel
+  thirds.}
+
+\fntext{et-12}{%
+  In Michaelsen's terminology, the three auditory streams ``project similar
+  futures'' \parentext{\headlesscite[60]{michaelsen:2013}}. The particulars of
+  auditory streams and implications need not concern us too much here, since
+  it is relatively clear that all three members project the blues.}
+
+\fntext{et-13}{%
+  Incidentally, the arrival on F is perhaps unusually contrapuntal: it seems
+  as though Bryant's voicing is is dictated by the lower-voice motion
+  G--\Gflat--F, while the upper voice C\sharp\ demands resolution to D,
+  fulfilled on the downbeat of the next chorus. These contrapuntal motions all
+  combine with the bass E\nat\ to produce a German seventh chord in the second
+  half of m.~350; a fairly typical predominant in classical music, but
+  extremely rare in jazz.}
+
 %%% Local Variables:
 %%% mode: latex
 %%% TeX-master: "../diss"
