Text on outside playing in Eternal Triangle, c17.

--- a/footnotes/ch5-notes.tex
+++ b/footnotes/ch5-notes.tex
@@ -216,8 +216,14 @@
   G--\Gflat--F, while the upper voice C\sharp\ demands resolution to D,
   fulfilled on the downbeat of the next chorus. These contrapuntal motions all
   combine with the bass E\nat\ to produce a German seventh chord in the second
-  half of m.~350; a fairly typical predominant in classical music, but
+  half of m.~350---a fairly typical predominant in classical music, but
   extremely rare in jazz.}
+
+\fntext{et-14}{%
+  A similar phenomenon occurs in the final turnaround of Joe Henderson's
+  ``Isotope,'' discussed in Section \ref{subsec:isotope-solo}. Because the
+  turnaround is so distinct, Henderson simply arpeggiates the harmonies in
+  most of his improvised choruses to make them as clear as possible.}
 
 %%% Local Variables:
 %%% mode: latex
