Add examples for trading 8s.

--- a/footnotes/ch5-notes.tex
+++ b/footnotes/ch5-notes.tex
@@ -221,7 +221,7 @@
 
 \fntext{et-14}{%
   A similar phenomenon occurs in the final turnaround of Joe Henderson's
-  ``Isotope,'' discussed in Section \ref{subsec:isotope-solo}. Because the
+  ``Isotope,'' discussed in Section~\ref{subsec:isotope-solo}. Because the
   turnaround is so distinct, Henderson simply arpeggiates the harmonies in
   most of his improvised choruses to make them as clear as possible.}
 
