Finish "Eternal Triangle" analysis.

--- a/footnotes/ch5-notes.tex
+++ b/footnotes/ch5-notes.tex
@@ -225,6 +225,14 @@
   turnaround is so distinct, Henderson simply arpeggiates the harmonies in
   most of his improvised choruses to make them as clear as possible.}
 
+\fntext{et-15}{%
+  Given the convergence of all three members of the ensemble on this \h{Bmaj7}
+  chord, it seems likely that this harmonic move was planned in advance.
+  Though it is impossible to say for certain, the fact that it occurs on the
+  last chorus of trading provides some support; it is easy to imagine a
+  situation in which the band decides (before recording) that a move to B
+  major in the second A section will mark the last chorus of saxophone solos.}
+
 %%% Local Variables:
 %%% mode: latex
 %%% TeX-master: "../diss"
