Add Lo-Joe transcription.

--- a/appendices/transcriptions.tex
+++ b/appendices/transcriptions.tex
@@ -3,7 +3,6 @@
 \addtocspace
 \singlespacing
 
-% xxx Write something about transcription generally here
 Transcription is a notoriously difficult problem in jazz. As Steve Larson
 (among others) has noted, any transcription is also, in some sense, an
 analysis.\footcite[2]{larson:2009} In the transcriptions that follow, I have
@@ -42,6 +41,7 @@ refer to a given passage's harmonic context.
     \item ``Blues for Alice'' -- Rahsaan Roland Kirk \DottedPage{transcription:blues-for-alice}
     \item ``The Eternal Triangle'' -- Sonny Stitt and Sonny Rollins \DottedPage{transcription:eternal-triangle}
     \item ``Isotope'' -- Joe Henderson \DottedPage{transcription:isotope}
+    \item ``Lo-Joe'' (head only) -- George Coleman \DottedPage{transcription:lo-joe}
     \item ``Rhythm-a-ning'' -- Johnny Griffin and Thelonious Monk \DottedPage{transcription:rhythm-a-ning}
 \end{compactitem}
 \nocite{ammons:stitt,henderson:isotope,monk:action,kirk:freekings}
@@ -51,7 +51,7 @@ refer to a given passage's harmonic context.
 \phantomsection
 \addcontentsline{toc}{section}{“Autumn Leaves” -- Gene Ammons and Sonny Stitt}
 \label{transcription:autumn-leaves}
-\centerGraphic[page=1,,clip,trim=0pt .6in 0pt 0pt,width=.95\textwidth]{%
+\centerGraphic[page=1,clip,trim=0pt .6in 0pt 0pt,width=.95\textwidth]{%
   eps/transcriptions/autumn-leaves.pdf}
 \blankfootnote{%
     The head changes for this recording are as given in Figure
@@ -65,7 +65,7 @@ refer to a given passage's harmonic context.
 \phantomsection
 \addcontentsline{toc}{section}{“Blues for Alice” -- Rahsaan Roland Kirk}
 \label{transcription:blues-for-alice}
-\centerGraphic[page=1,,clip,trim=0pt 1in 0pt 0pt]{eps/transcriptions/blues-for-alice.pdf}
+\centerGraphic[page=1,clip,trim=0pt 1in 0pt 0pt]{eps/transcriptions/blues-for-alice.pdf}
 \blankfootnote{%
     The album gives Kirk's name only as Roland Kirk; he added
     Rahsaan to his name in 1969. Kirk often played multiple instruments
@@ -78,7 +78,7 @@ refer to a given passage's harmonic context.
 \addcontentsline{toc}{section}{“The Eternal Triangle” -- Sonny Stitt and Sonny
   Rollins}
 \label{transcription:eternal-triangle}
-\centerGraphic[page=1,,clip,trim=0pt 1in 0pt 0pt]{eps/transcriptions/eternal-triangle.pdf}
+\centerGraphic[page=1,clip,trim=0pt 1in 0pt 0pt]{eps/transcriptions/eternal-triangle.pdf}
 \blankfootnote{%
   Sonny Rollins is indicated in the transcription with [S.R], and Sonny Stitt
   with [S.S.].}
@@ -88,6 +88,18 @@ refer to a given passage's harmonic context.
 \addcontentsline{toc}{section}{“Isotope” -- Joe Henderson}
 \label{transcription:isotope}
 \includepdf[pages=-,pagecommand={},noautoscale]{eps/transcriptions/isotope.pdf}
+
+\phantomsection
+\addcontentsline{toc}{section}{“Lo-Joe” (head) -- George Coleman}
+\label{transcription:lo-joe}
+\centerGraphic[page=1,clip,trim=0pt 2in 0pt 0pt]{eps/transcriptions/lo-joe.pdf}
+\blankfootnote{%
+  This transcription contains only the head of the tune; the bass line sounds
+  down an octave. In many cases, the piano voicings are difficult to hear in the
+  recording. I have tried to keep the transcription is as faithful as possible,
+  but the disclaimer on using the transcription as a supplement to (not a
+  replacement for) the recording applies more strongly than usual in this case.}
+\includepdf[pages=2-,pagecommand={},noautoscale]{eps/transcriptions/lo-joe.pdf}
 
 \phantomsection
 \addcontentsline{toc}{section}{“Rhythm-a-ning” -- Johnny Griffin and Thelonious Monk}
