Add analysis of Lo-Joe A sections.

--- a/appendices/transcriptions.tex
+++ b/appendices/transcriptions.tex
@@ -44,7 +44,7 @@ refer to a given passage's harmonic context.
     \item ``Lo-Joe'' (head only) -- George Coleman \DottedPage{transcription:lo-joe}
     \item ``Rhythm-a-ning'' -- Johnny Griffin and Thelonious Monk \DottedPage{transcription:rhythm-a-ning}
 \end{compactitem}
-\nocite{ammons:stitt,henderson:isotope,monk:action,kirk:freekings}
+\nocite{ammons:stitt,henderson:isotope,monk:action,kirk:freekings,coleman:amsterdam}
 
 \newpage
 
@@ -96,7 +96,7 @@ refer to a given passage's harmonic context.
 \blankfootnote{%
   This transcription contains only the head of the tune; the bass line sounds
   down an octave. In many cases, the piano voicings are difficult to hear in the
-  recording. I have tried to keep the transcription is as faithful as possible,
+  recording. I have tried to keep the transcription as faithful as possible,
   but the disclaimer on using the transcription as a supplement to (not a
   replacement for) the recording applies more strongly than usual in this case.}
 \includepdf[pages=2-,pagecommand={},noautoscale]{eps/transcriptions/lo-joe.pdf}
