--- a/footnotes/ch5-notes.tex
+++ b/footnotes/ch5-notes.tex
@@ -136,6 +136,50 @@
   entrance on F\sharp\ at m.~385 removes any doubt as to the progression that
   will follow.}
 
+\fntext{lj-1}{%
+  I am thankful to Prof.\ Tom Walsh for bringing this tune to my attention.}
+
+\fntext{lj-2}{%
+  That ``Lo-Joe'' is a Rhythm tune would be relatively clear to most jazz
+  listeners: it has a 32-bar AABA form, half-note harmonic rhythm, moves to
+  the subdominant in the sixth bar of the A sections, and so on. Admittedly,
+  this fact may not be readily apparent to listeners who are not as familiar
+  with the genre of Rhythm tunes.}
+
+\fntext{lj-3}{%
+  The second A section is given here only because there is more activity in
+  the piano, providing more harmonic information. Because there are three
+  nearly identical A sections in Rhythm tunes, they can generally be exchanged
+  freely. In this analysis, only one A section is usually given, but the
+  reader is encouraged to compare with the corresponding locations in the
+  other two A sections.}
+
+\fntext{lj-4}{%
+  % xxx footnotes about Tymoczko's section "from thirds to fourths"
+  [Tymoczko and fourths here.]
+}
+
+\fntext{lj-5}{%
+  % xxx need note about 7alt. chords.
+  Recall that the ``altered chord'' has a specific meaning in jazz. To avoid
+  confusion, and because they are prevalent throughout ``Lo-Joe,'' in this
+  analysis the altered chord will be called ``\alt.''}
+
+\fntext{lj-6}{%
+  During the solos, there there are consistently only two chords in this bar,
+  but then again, ``Lo-Joe'' could be a tune in which there are separate sets
+  of head and solo changes.}
+
+
+
+
+
+
+
+
+
+
+
 \fntext{et-1}{%
   % xxx find better source for this?
   See, for example, Stephen Cook's review on \emph{AllMusic}, where he notes
