--- a/mjmdiss.sty
+++ b/mjmdiss.sty
@@ -321,6 +321,7 @@
 \newcommand{\V}{\mbox{V\ensuremath{^7}}\xspace}
 \newcommand{\I}{\mbox{I\ensuremath{^7}}\xspace}
 \newcommand{\tuneitem}[1]{\vspace{1em}\noindent#1\vspace{0.5em}}
+\newcommand{\alt}{$7$alt\xspace}
 
 % uppercase small caps
 \newcommand{\abbrev}[1]{{\abbrevSC #1}}
