Add text about "Lo-Joe" bridge.
Also re-introduce "Eternal Triangle."

--- a/footnotes/ch5-notes.tex
+++ b/footnotes/ch5-notes.tex
@@ -170,6 +170,16 @@
   but then again, ``Lo-Joe'' could be a tune in which there are separate sets
   of head and solo changes.}
 
+\fntext{lj-7}{%
+  % xxx need page number
+  This progression is given (in the key of \Bflat) in \cite[xxx]{aebersold:rhythm}.}
+
+\fntext{lj-8}{%
+  It is also a concept that is absent from other prevalent theories of jazz
+  harmony: it is easy to imagine an analysis in which the arpeggiated triads
+  and seventh chords of the melody of ``Lo-Joe'' form coherent voice-leading
+  strands to and from structural tonic chord members, for example.}
+
 
 
 
