--- a/footnotes/ch5-notes.tex
+++ b/footnotes/ch5-notes.tex
@@ -77,6 +77,9 @@
   ``knowing the changes,'' since to really know Rhythm changes involves knowing
   about the wide variety of harmonic possibilities that defines the genre.}
 
+% Rhythm-a-ning
+% ----------------
+
 \fntext{ran-a}{%
   Robert Hodson provides a similar analysis of the \emph{Criss-Cross}
   recording (though not from a transformational perspective) in
@@ -136,6 +139,9 @@
   entrance on F\sharp\ at m.~385 removes any doubt as to the progression that
   will follow.}
 
+% Lo-Joe
+% ----------------
+
 \fntext{lj-1}{%
   I am thankful to Prof.\ Tom Walsh for bringing this tune to my attention.}
 
@@ -160,10 +166,18 @@
 }
 
 \fntext{lj-5}{%
-  % xxx need note about 7alt. chords.
-  Recall that the ``altered chord'' has a specific meaning in jazz. To avoid
-  confusion, and because they are prevalent throughout ``Lo-Joe,'' in this
-  analysis the altered chord will be called ``\alt.''}
+  Recall that the ``altered chord'' has a specific meaning in jazz, as a
+  dominant that includes both \sharp{}9 and \flat{}9 (along with other
+  possible extensions). To avoid confusion, and because they are prevalent
+  throughout ``Lo-Joe,'' in this analysis the altered chord will be called
+  ``\alt.''}
+
+\fntext{lj-5a}{%
+  The unusual signature designation here is an artifact of Russell's
+  categorizations: normally dominant chords have the parent Lydian tonic a
+  whole-step below their roots (the parent Lydian tonic of \h{G7} is F), but
+  for \alt chords the Lydian tonic is a half-step above (the parent of
+  \h{G7alt} is \Aflat).}
 
 \fntext{lj-6}{%
   During the solos, there there are consistently only two chords in this bar,
@@ -171,8 +185,7 @@
   of head and solo changes.}
 
 \fntext{lj-7}{%
-  % xxx need page number
-  This progression is given (in the key of \Bflat) in \cite[xxx]{aebersold:rhythm}.}
+  This progression is given (in the key of \Bflat) in \cite[27]{aebersold:rhythm}.}
 
 \fntext{lj-8}{%
   It is also a concept that is absent from other prevalent theories of jazz
@@ -181,14 +194,8 @@
   strands to and from structural tonic chord members, for example.}
 
 
-
-
-
-
-
-
-
-
+% Eternal Triangle
+% ----------------
 
 \fntext{et-1}{%
   % xxx find better source for this?
