Tie up dangling ends on "Lo-Joe" analysis.

--- a/footnotes/ch5-notes.tex
+++ b/footnotes/ch5-notes.tex
@@ -152,6 +152,11 @@
   this fact may not be readily apparent to listeners who are not as familiar
   with the genre of Rhythm tunes.}
 
+\fntext{lj-2a}{%
+  This focus on melodic upper extensions becomes more common after the bebop
+  era; Robert Hodson discusses this (in connection with how players create
+  individual melodic profiles) in \headlesscite[42--46]{hodson:2007}.}
+
 \fntext{lj-3}{%
   The second A section is given here only because there is more activity in
   the piano, providing more harmonic information. Because there are three
@@ -161,9 +166,9 @@
   other two A sections.}
 
 \fntext{lj-4}{%
-  % xxx footnotes about Tymoczko's section "from thirds to fourths"
-  [Tymoczko and fourths here.]
-}
+  One of the hallmarks of later (post-1960) jazz is the increase of the use of
+  perfect fourths, especially in piano voicings; see
+  \cite[357--60]{tymoczko:2011} for an overview of this practice.}
 
 \fntext{lj-5}{%
   Recall that the ``altered chord'' has a specific meaning in jazz, as a
