Text edits for section 5.1.

--- a/footnotes/ch5-notes.tex
+++ b/footnotes/ch5-notes.tex
@@ -8,6 +8,13 @@
   noun, while adjectival uses drop the ``changes'' (as in ``Oleo is a Rhythm
   tune'').}
 
+\fntext{rcg-1a}{%
+  \cite[42--44]{baker:tunes}. New tunes that are based on the chord changes to
+  other tunes are known as ``contrafacts.'' Part of the reason for the
+  proliferation of contrafacts in general (and the genre of Rhythm tunes in
+  particular) is that jazz musicians could avoid paying royalties to the
+  Gershwins. On contrafacts more generally, see \cite[8 and 12--15]{owens:1995}.}
+
 \fntext{rcg-2}{%
   The vast majority of Rhythm tunes are in the key of \Bflat. Those
   in Table \ref{rcg:rhythm-tunes} that are not are Hoyt Curtain's theme to the
@@ -52,8 +59,8 @@
   for a schema theory approach, following in the footsteps of
   \cite{gjerdingen:2007}. The two- and four-bar units here (turnarounds,
   dominant cycles) are not unlike the stock phrases used in the galant style,
-  and jazz pedagogical materials like the Aebersold and Jaffe texts previously
-  cited could easily serve as analogs to the 18th-century Italian
+  and jazz pedagogical materials like the previously-cited Aebersold and Jaffe
+  texts could easily serve as analogs to the 18th-century Italian
   \emph{partimenti} often used by schema theorists.}
 
 \fntext{rcg-9}{%
@@ -70,7 +77,7 @@
   \cite[242]{levine:1995}. \\ \hspace{2.55em}%
   Phil Ford notes that this kind of secret knowledge is fundamental to
   understanding jazz as a part of an emerging hip culture in the 1940s--50s,
-  which is incidentally the time that Rhythm tunes began to proliferate. As he
+  which coincides with the time that Rhythm tunes began to proliferate. As he
   puts it, ``{}`knowing the score' is what practically defines the hipster:
   \emph{hip}, in its original meaning, means to be
   aware'' \parentext{\headlesscite[54]{ford:2002}}. We might instead read
