Text edits for "Rhythm-a-ning."
Also changed "Rhythm-A-Ning" (capitals) to "Rhythm-a-ning" (lowercase)
throughout.

--- a/footnotes/ch5-notes.tex
+++ b/footnotes/ch5-notes.tex
@@ -87,6 +87,11 @@
 % Rhythm-a-ning
 % ----------------
 
+\fntext{ran-0}{%
+  The harmonization \h{Cm7}--\h{Cso7} fits the melody, but does not appear in
+  Monk's recordings, where the bassist consistently arrives on \Eflat on the
+  downbeat of the second bar.}
+
 \fntext{ran-a}{%
   Robert Hodson provides a similar analysis of the \emph{Criss-Cross}
   recording (though not from a transformational perspective) in
@@ -113,12 +118,12 @@
 \fntext{ran-3a}{%
   There is much more to be said about the role of interaction in negotiating
   harmony in Rhythm tunes; we will return to this idea in more detail in the
-  analysis of ``The Eternal Triangle'' in the next section.}
+  analysis of ``The Eternal Triangle'' in Section \ref{sec:eternal-triangle}.}
 
 \fntext{ran-4}{%
   This difficulty is perhaps one of the reason that Steve Larson's book on the
   subject \parentext{\headlesscite{larson:2009}} focuses primarily on solo
-  piano recordings of ``'Round Midnight,'' a piece in which the harmonies are
+  piano recordings of ``\,'Round Midnight,'' a piece in which the harmonies are
   well-defined---unlike Rhythm changes---and there are no other band members
   to muddy the waters. (Larson does include a live recording from Bill Evans
   and a partial transcription of a Bud Powell recording, each of which uses a
@@ -134,8 +139,8 @@
   a three-beat pattern over the quadruple meter starting in m.~341.}
 
 \fntext{ran-6}{%
-  ``Comping'' is what jazz musicians call the act of accompanying (or
-  complementing) a soloist; see \cite[223--34]{levine:piano}.}
+  ``Comping'' is what jazz musicians call the act of ac\textbf{comp}anying (or
+  \textbf{comp}lementing) a soloist; see \cite[223--34]{levine:piano}.}
 
 \fntext{ran-7}{%
   \emph{Thelonious in Action} is a live recording made at the end of an
