Text edits for "Lo-Joe."

--- a/footnotes/ch5-notes.tex
+++ b/footnotes/ch5-notes.tex
@@ -155,7 +155,7 @@
 % ----------------
 
 \fntext{lj-1}{%
-  I am thankful to Prof.\ Tom Walsh for bringing this tune to my attention.}
+  I am grateful to Prof.\ Tom Walsh for bringing this tune to my attention.}
 
 \fntext{lj-2}{%
   That ``Lo-Joe'' is a Rhythm tune would be relatively clear to most jazz
@@ -174,7 +174,7 @@
   the piano, providing more harmonic information. Because there are three
   nearly identical A sections in Rhythm tunes, they can generally be exchanged
   freely. In this analysis, only one A section is usually given, but the
-  reader is encouraged to compare with the corresponding locations in the
+  reader is encouraged to compare the corresponding locations in the
   other two A sections.}
 
 \fntext{lj-4}{%
