Text/example edits for "Eternal Triangle."

--- a/footnotes/ch5-notes.tex
+++ b/footnotes/ch5-notes.tex
@@ -33,15 +33,9 @@
   The ``mix-and-match'' metaphor comes from \cite[149]{jaffe:1996}.}
 
 \fntext{rcg-5}{%
-  \label{fn:deep-structure}
   These six harmonizations do not begin to constitute a complete set of
   substitutions for these four bars. Jamey Aebersold gives 43 harmonizations
-  of the Rhythm A section in \headlesscite[26]{aebersold:rhythm}. Robert
-  Hodson, borrowing a linguistic metaphor from Noam Chomsky, describes the
-  harmony of the tune in a generative fashion: the ``deep structure'' of
-  the Rhythm changes consists of prolongations of \Bflat in the A sections,
-  with the bridge consisting of a motion towards \Bflat; see
-  \cite[62--65]{hodson:2007}.}
+  of the Rhythm A section in \headlesscite[26]{aebersold:rhythm}.}
 
 \fntext{rcg-6}{%
   I have not included another copy of the complete \tf space here, but one can
@@ -242,10 +236,11 @@
 
 \fntext{et-5}{%
   This repeating pattern is one of what are sometimes called ``digital
-  patterns''; though they are more common at faster tempos (and in eighth
-  notes), this is a standard 5--3--2--1 pattern, where the numbers indicate
-  scale degrees of the minor seventh chord. Jerry Coker gives this example
-  from Rollin's solo in \headlesscite[11]{coker:elements}.}
+  patterns.'' Though these patterns are more common at faster tempos (and in
+  eighth notes), this is a standard 5--3--2--1 pattern, where the numbers
+  indicate scale degrees of the minor seventh chord. Jerry Coker gives the
+  passage at Figure \ref{et:sr-seq-bridge}a as an example of digital patterns
+  in \headlesscite[11]{coker:elements}.}
 
 \fntext{et-6}{%
   On metrical dissonance in jazz, see especially \cite[52--54 and
@@ -273,7 +268,7 @@
   Throughout these interactional analyses, I follow Michaelsen's own use of
   language, which relocates a listener's perception into the player. Thus,
   ``Stitt responds to this tonic pedal'' should be understood as ``I, the
-  listener/analyst, hear Stitt's musical utterance in relationship to the
+  listener/analyst, hear Stitt's musical utterance as a response to the
   tonic pedal of the bass.'' This language, though potentially confusing, is
   in general clearer and easier to read. See \cite[46--47]{michaelsen:2013}.}
 
@@ -289,8 +284,8 @@
   it is relatively clear that all three members project the blues.}
 
 \fntext{et-13}{%
-  Incidentally, the arrival on F is perhaps unusually contrapuntal: it seems
-  as though Bryant's voicing is is dictated by the lower-voice motion
+  Incidentally, the arrival on F in the piano is perhaps unusually contrapuntal: it seems
+  as though Bryant's voicing in m.~350 is dictated by the lower-voice motion
   G--\Gflat--F, while the upper voice C\sharp\ demands resolution to D,
   fulfilled on the downbeat of the next chorus. These contrapuntal motions all
   combine with the bass E\nat\ to produce a German seventh chord in the second
